--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "~8.3.14",
-    "@angular/compiler-cli": "~8.2.11",
     "@angular/animations": "~8.2.11",
     "@angular/cdk": "~8.2.3",
+    "@angular/cli": "~8.3.14",
     "@angular/common": "~8.2.11",
     "@angular/compiler": "~8.2.11",
+    "@angular/compiler-cli": "~8.2.11",
     "@angular/core": "~8.2.11",
     "@angular/fire": "^5.4.2",
     "@angular/forms": "~8.2.11",
@@ -28,6 +28,8 @@
     "firebase": "^7.10.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "ngx-infinite-scroll": "^9.0.0",
+    "ngx-spinner": "^9.0.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
