--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
+    "@types/leaflet": "^1.5.12",
     "compass-mixins": "^0.12.10",
     "firebase": "^7.10.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "leaflet": "^1.6.0",
     "ngx-infinite-scroll": "^9.0.0",
     "ngx-spinner": "^9.0.2",
     "rxjs": "~6.4.0",
